--- a/src/index.css
+++ b/src/index.css
@@ -66,12 +66,12 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  background: rgb(17, 23, 35);
 }
 
 h1 {
@@ -192,5 +192,6 @@ button:focus-visible {
   }
   body {
     @apply bg-background text-foreground;
+    height: 100%;
   }
 }
